--- a/frontend/src/components/MainNavigation.module.css
+++ b/frontend/src/components/MainNavigation.module.css
@@ -16,7 +16,11 @@
   color: var(--color-primary-400);
 }
 
-.list a:hover,
+.list a:hover {
+  color: var(--color-primary-800);
+}
+
 .list a.active {
   color: var(--color-primary-800);
+  border-bottom: 1px solid var(--color-primary-800);
 }
